tools/tests/errors/surf_lib_06.ki
# A doubled quantifier has nothing to repeat.
var r = import("regex")
discard r.compile("a**")
